--- a/SupermarketManagementApp/App.config
+++ b/SupermarketManagementApp/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="SUPERMARKET_MANAGEMENTEntities" connectionString="metadata=res://*/DTO.SupermarketModel.csdl|res://*/DTO.SupermarketModel.ssdl|res://*/DTO.SupermarketModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MSI\SQLEXPRESS;initial catalog=SUPERMARKET_MANAGEMENT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SUPERMARKET_MANAGEMENTEntities" connectionString="metadata=rInes://*/DTO.SupermarketModel.csdl|res://*/DTO.SupermarketModel.ssdl|res://*/DTO.SupermarketModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MSI\SQLEXPRESS;initial catalog=SUPERMARKET_MANAGEMENT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="SupermarketContext" connectionString="data source=HHunTTer;initial catalog=SUPERMARKET_MANAGEMENT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
